--- a/app/src/main/res/layout/activity_transfer1.xml
+++ b/app/src/main/res/layout/activity_transfer1.xml
@@ -10,6 +10,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp"
         tools:context=".transfer1.Transfer1Activity">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,7 +27,6 @@
                 style="@style/Headline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="22dp"
                 android:layout_marginTop="26dp"
                 android:layout_marginBottom="10dp"
                 android:src="@drawable/ic_back_arrow"
@@ -62,7 +62,7 @@
                 android:id="@+id/ivProfile"
                 android:layout_width="40dp"
                 android:layout_height="0dp"
-                android:layout_marginEnd="22dp"
+                android:layout_marginEnd="2dp"
                 android:padding="10dp"
                 android:src="@drawable/ic_profile"
                 app:layout_constraintBottom_toBottomOf="@id/ivMessage"
@@ -76,7 +76,6 @@
             android:id="@+id/tvWhoSend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="33dp"
             android:text="@string/who_send"
             android:theme="@style/Display5_long"
@@ -87,7 +86,6 @@
             android:id="@+id/etSearch"
             android:layout_width="0dp"
             android:layout_height="50dp"
-            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="28dp"
             android:hint="@string/search_hint"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,7 +96,6 @@
             android:id="@+id/tlAccount"
             android:layout_width="0dp"
             android:layout_height="44dp"
-            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="13dp"
             android:background="@drawable/shape_radius8_gray100"
             app:layout_constraintEnd_toEndOf="parent"
@@ -115,7 +112,6 @@
             android:id="@+id/vpAccountList"
             android:layout_width="0dp"
             android:layout_height="204dp"
-            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="12dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -136,7 +132,6 @@
             android:id="@+id/tvLastTransfer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:text="최근보낸 사람"
             android:theme="@style/Headline"
@@ -147,9 +142,9 @@
             android:id="@+id/rvLastTransferList"
             android:layout_width="0dp"
             android:layout_height="148dp"
-            android:layout_marginHorizontal="20dp"
             android:layout_marginTop="18dp"
             android:layout_marginBottom="30dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
