--- a/app/src/main/res/layout/activity_transfer3.xml
+++ b/app/src/main/res/layout/activity_transfer3.xml
@@ -1,17 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <androidx.appcompat.widget.AppCompatImageButton
-        android:id="@+id/btn_back_transfer3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/white"
-        android:src="@drawable/icon_arrow_left"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/appbar"
+        android:layout_width="0dp"
+        android:layout_height="?actionBarSize"
+        android:background="?colorOnPrimary"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/ivBack"
+            style="@style/Headline"
+            android:padding="10dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="26dp"
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/ic_back_arrow"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <ImageView
+            android:id="@+id/ivMessage"
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="2dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_message"
+            app:layout_constraintBottom_toBottomOf="@id/ivBack"
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toStartOf="@id/ivMic"
+            app:layout_constraintTop_toTopOf="@id/ivBack" />
+
+        <ImageView
+            android:id="@+id/ivMic"
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="2dp"
+            android:padding="10dp"
+            android:src="@drawable/ic__mic"
+            app:layout_constraintBottom_toBottomOf="@id/ivMessage"
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toStartOf="@id/ivProfile"
+            app:layout_constraintTop_toTopOf="@id/ivMessage" />
+
+        <ImageView
+            android:id="@+id/ivProfile"
+            android:layout_width="40dp"
+            android:layout_height="0dp"
+            android:layout_marginEnd="22dp"
+            android:padding="10dp"
+            android:src="@drawable/ic_profile"
+            app:layout_constraintBottom_toBottomOf="@id/ivMessage"
+            app:layout_constraintDimensionRatio="1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="@id/ivMessage" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     <TextView
         android:id="@+id/tv_user_name_transfer3"
@@ -19,11 +73,11 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
         android:layout_marginTop="19dp"
-        android:text="@string/transfer3_user"
         android:textColor="@color/black"
         android:theme="@style/Subhead3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_back_transfer3" />
+        app:layout_constraintTop_toBottomOf="@+id/appbar"
+        tools:text="@string/transfer3_user" />
 
     <TextView
         android:id="@+id/textView"
@@ -34,40 +88,40 @@
         android:textColor="@color/black"
         android:theme="@style/Subhead3"
         app:layout_constraintLeft_toRightOf="@+id/tv_user_name_transfer3"
-        app:layout_constraintTop_toBottomOf="@+id/btn_back_transfer3" />
+        app:layout_constraintTop_toBottomOf="@+id/appbar" />
 
     <TextView
         android:id="@+id/tv_account_name_transfer3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:text="@string/transfer3_account_name"
         android:textColor="@color/gray_400"
         android:theme="@style/Body5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_transfer3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_transfer3"
+        tools:text="@string/transfer3_account_name" />
 
     <TextView
         android:id="@+id/tv_senderAccount_transfer3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/transfer3_account_number"
         android:textColor="@color/gray_400"
         android:theme="@style/Body5"
         app:layout_constraintLeft_toRightOf="@+id/tv_account_name_transfer3"
-        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_transfer3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_transfer3"
+        tools:text="@string/transfer3_account_number" />
 
     <TextView
         android:id="@+id/tv_send_money_transfer3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
-        android:text="@string/transfer3_send_money"
         android:textColor="@color/gray_600"
         android:theme="@style/Display5"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_senderAccount_transfer3" />
+        app:layout_constraintTop_toBottomOf="@+id/tv_senderAccount_transfer3"
+        tools:text="@string/transfer3_send_money" />
 
     <TextView
         android:id="@+id/tv_send_money_messeage_transfer3"
@@ -101,36 +155,36 @@
             android:id="@+id/tv_bank_transfer3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="신한"
             android:textColor="@color/gray_600"
             android:theme="@style/Body4"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"
             app:layout_constraintStart_toStartOf="@+id/ll_bank_transfer3"
             app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3"
-            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"/>
+            tools:text="신한" />
 
         <TextView
             android:id="@+id/tv_number_transfer3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
-            android:text="1212-1222-3334"
             android:textColor="@color/gray_600"
             android:theme="@style/Body2"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"
             app:layout_constraintLeft_toRightOf="@+id/tv_bank_transfer3"
             app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3"
-            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"/>
+            tools:text="1212-1222-3334" />
 
         <TextView
             android:id="@+id/tv_price_transfer3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="11dp"
-            android:text="3,773,400"
             android:textColor="@color/gray_600"
             android:theme="@style/Body3"
+            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"
             app:layout_constraintLeft_toRightOf="@+id/tv_number_transfer3"
             app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3"
-            app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"/>
+            tools:text="3,773,400" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -138,10 +192,9 @@
             android:text="원"
             android:textColor="@color/gray_600"
             android:theme="@style/Body3"
-            app:layout_constraintLeft_toRightOf="@+id/tv_price_transfer3"
-            app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3"
             app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"
-            />
+            app:layout_constraintLeft_toRightOf="@+id/tv_price_transfer3"
+            app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3" />
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:layout_width="0dp"
@@ -150,9 +203,9 @@
             android:adjustViewBounds="true"
             android:backgroundTint="@color/white"
             android:src="@drawable/icon_arrow_right"
-            app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3"
             app:layout_constraintBottom_toBottomOf="@+id/ll_bank_transfer3"
-            app:layout_constraintEnd_toEndOf="@+id/ll_bank_transfer3"/>
+            app:layout_constraintEnd_toEndOf="@+id/ll_bank_transfer3"
+            app:layout_constraintTop_toTopOf="@+id/ll_bank_transfer3" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -175,21 +228,21 @@
             android:text="@string/transfer3_recipient"
             android:textColor="@color/gray_400"
             android:theme="@style/Body6"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edt_receiver_memo_transfer3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="90dp"
+            android:background="@null"
             android:textColor="@color/gray_600"
             android:theme="@style/Body6"
-            android:background="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tv_recipient_transfer3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -212,21 +265,21 @@
             android:text="@string/transfer3_memos"
             android:textColor="@color/gray_400"
             android:theme="@style/Body6"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/edt_transfer_memo_transfer3"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginLeft="90dp"
+            android:background="@null"
             android:textColor="@color/gray_600"
             android:theme="@style/Body6"
-            android:background="@null"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/tv_passbook_memo_transfer3"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -247,18 +300,18 @@
             android:text="@string/transfer3_charge"
             android:textColor="@color/gray_400"
             android:theme="@style/Body6"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/tv_charge_transfer3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingRight="18dp"
             android:text="@string/transfer3_free"
             android:textColor="@color/black"
             android:theme="@style/Subhead3"
-            android:paddingRight="18dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -297,8 +350,8 @@
         android:text="@string/transfer3_plus_send"
         android:textColor="@color/black"
         android:theme="@style/Headline"
-        app:layout_constraintEnd_toStartOf="@id/btn_send_transfer3"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/btn_send_transfer3"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
