--- a/app/src/main/res/layout/item_last_transfer.xml
+++ b/app/src/main/res/layout/item_last_transfer.xml
@@ -16,30 +16,50 @@
         tools:src="@mipmap/ic_launcher_round" />
 
     <TextView
-        android:id="@+id/tvBankName"
-        android:layout_width="0dp"
+        android:id="@+id/tvUserName"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
+        android:textColor="@color/gray_600"
         android:theme="@style/Subhead3"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:maxLines="1"
-        android:ellipsize="end"
+        app:layout_constraintBottom_toTopOf="@id/tvAccountNumber"
         app:layout_constraintStart_toEndOf="@id/ivBankLogo"
         app:layout_constraintTop_toTopOf="@id/ivBankLogo"
-        android:textColor="@color/gray_600"
-        app:layout_constraintBottom_toTopOf="@id/tvAccountNumber"
-        tools:text="신한 청년희망적금" />
+        tools:text="곽의진" />
+
+    <TextView
+        android:id="@+id/tvDate"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:textColor="@color/gray_300"
+        android:theme="@style/Body2"
+        app:layout_constraintBottom_toBottomOf="@id/tvUserName"
+        app:layout_constraintStart_toEndOf="@id/tvUserName"
+        app:layout_constraintTop_toTopOf="@id/tvUserName"
+        tools:text="2023.05.04" />
 
     <TextView
         android:id="@+id/tvAccountNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="11dp"
-        android:theme="@style/Body5"
         android:textColor="@color/gray_400"
+        android:theme="@style/Body5"
         app:layout_constraintBottom_toBottomOf="@id/ivBankLogo"
         app:layout_constraintStart_toEndOf="@id/ivBankLogo"
-        app:layout_constraintTop_toBottomOf="@id/tvBankName"
+        app:layout_constraintTop_toBottomOf="@id/tvUserName"
         tools:text="신한 230-280-338444" />
+
+    <ImageView
+        android:id="@+id/ivDelete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete"
+        android:layout_marginEnd="12dp"
+        android:padding="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
